# spriteorama

./: .gitignore  CMakeLists.txt  LICENSE  README.md  spritorama.code-workspace
src/spritorama/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp  opengl_canvas.cpp  opengl_canvas.hpp  viewport.cpp  viewport.hpp
src/spritorama/shaders/: texture.frag  texture.vert
